# maxwell

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  Error.h  ExecutionState.h  GameExecutionState.cpp  GameExecutionState.h  LegalMoveGenerator.cpp  LegalMoveGenerator.h  Piece.h  Types.h  ZTestBoard.cpp  ZTestBoard.h  ZTestExecutionState.cpp  ZTestExecutionState.h  ZTestLegalMoveGenerator.cpp  ZTestLegalMoveGenerator.h  main.cpp  makefile
ref/: Correct Starting Positions
